force-app/main/default/objects/Case/fields/Acepto_visita__c.field-meta.xml
<CustomField>
    <fullName>Acepto_visita__c</fullName>
    <label>Aceptó visita?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esperando respuesta</fullName>
            </value>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>