force-app/main/default/objects/Case/fields/Antiguedad_caso__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad_caso__c</fullName>
    <formula>(DAY(DATEVALUE(ClosedDate))- DAY( DATEVALUE(CreatedDate))) + (((MONTH (DATEVALUE(ClosedDate)))-  MONTH( DATEVALUE(CreatedDate)))*30)</formula>
    <label>Antiguedad caso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>