force-app/main/default/objects/Case/fields/Area_Terapeutica__c.field-meta.xml
<CustomField>
    <fullName>Area_Terapeutica__c</fullName>
    <label>Área Terapéutica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Terapeutica</valueSetName>
    </valueSet>
</CustomField>