force-app/main/default/objects/Case/fields/Autoriza_el_cambio_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_el_cambio_del_producto__c</fullName>
    <label>¿Autoriza el cambio del producto?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>