force-app/main/default/objects/Case/fields/C_digo_de_producto_externo__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_producto_externo__c</fullName>
    <formula>Producto__r.Codigo_producto_Id_externo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de producto Id externo</label>
    <type>Text</type>
</CustomField>