force-app/main/default/objects/Case/fields/C_digo_NC__c.field-meta.xml
<CustomField>
    <fullName>C_digo_NC__c</fullName>
    <inlineHelpText>Ingresar todos los Códigos NC asociados separados por &quot;-&quot;</inlineHelpText>
    <label>Código NC</label>
    <type>TextArea</type>
</CustomField>