force-app/main/default/objects/Case/fields/Caller_Approach__c.field-meta.xml
<CustomField>
    <fullName>Caller_Approach__c</fullName>
    <label>Caller Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>