force-app/main/default/objects/Case/fields/Cambio_a_producto__c.field-meta.xml
<CustomField>
    <fullName>Cambio_a_producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cambio a producto</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.Producto_SAP__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.ProductCode</field>
            <operation>equals</operation>
            <value>COMP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Casos (Cambio a producto)</relationshipLabel>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>