force-app/main/default/objects/Case/fields/Cambio_a_Producto_externo__c.field-meta.xml
<CustomField>
    <fullName>Cambio_a_Producto_externo__c</fullName>
    <label>Cambio a Producto externo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area_Terapeutica__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avant Purisima</fullName>
            </value>
            <value>
                <fullName>Boost 1.5</fullName>
            </value>
            <value>
                <fullName>Boost Senior Drink</fullName>
            </value>
            <value>
                <fullName>Boost Senior Polvo</fullName>
            </value>
            <value>
                <fullName>Cetogenik 4:1</fullName>
            </value>
            <value>
                <fullName>Cetomix 4:1</fullName>
            </value>
            <value>
                <fullName>Diben</fullName>
            </value>
            <value>
                <fullName>Ensure</fullName>
            </value>
            <value>
                <fullName>Ensure Advance</fullName>
            </value>
            <value>
                <fullName>Ensure Clinicial</fullName>
            </value>
            <value>
                <fullName>Ensure Plus</fullName>
            </value>
            <value>
                <fullName>Fresubin 3.2Kcal</fullName>
            </value>
            <value>
                <fullName>Fresubin Creme</fullName>
            </value>
            <value>
                <fullName>Glucerna</fullName>
            </value>
            <value>
                <fullName>K.Flo</fullName>
            </value>
            <value>
                <fullName>K.Quik</fullName>
            </value>
            <value>
                <fullName>Kanso 2,5:1</fullName>
            </value>
            <value>
                <fullName>Ketocuisine 5:1</fullName>
            </value>
            <value>
                <fullName>Ketovie 3:1</fullName>
            </value>
            <value>
                <fullName>MCT Nutenta</fullName>
            </value>
            <value>
                <fullName>MCT Procal</fullName>
            </value>
            <value>
                <fullName>No consume fórmula</fullName>
            </value>
            <value>
                <fullName>No informa</fullName>
            </value>
            <value>
                <fullName>Supportan Drink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>