force-app/main/default/objects/Case/fields/Cambios_excepcionales_Dise_o__c.field-meta.xml
<CustomField>
    <fullName>Cambios_excepcionales_Dise_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambios excepcionales/Diseño</label>
    <type>Checkbox</type>
</CustomField>