force-app/main/default/objects/Case/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nutrilon4</fullName>
            </value>
            <value>
                <fullName>Vital4</fullName>
            </value>
            <value>
                <fullName>MercadoLibre</fullName>
            </value>
            <value>
                <fullName>Proximity</fullName>
            </value>
            <value>
                <fullName>Farmacity</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>Supermercado</fullName>
            </value>
            <value>
                <fullName>Hipermercado</fullName>
            </value>
            <value>
                <fullName>Almacen</fullName>
            </value>
            <value>
                <fullName>Farmacia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>