force-app/main/default/objects/Case/fields/Cantidad_1__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_1__c</fullName>
    <label>Cantidad 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>