force-app/main/default/objects/Case/fields/Cantidad_2__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_2__c</fullName>
    <label>Cantidad 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>