force-app/main/default/objects/Case/fields/Cantidad_3__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_3__c</fullName>
    <label>Cantidad 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>