force-app/main/default/objects/Case/fields/Cantidad_a_devolver__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_a_devolver__c</fullName>
    <label>Cantidad a devolver</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>