force-app/main/default/objects/Case/fields/Cantidad_a_reponer_2__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_a_reponer_2__c</fullName>
    <label>Cantidad a reponer 2°</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>