force-app/main/default/objects/Case/fields/Cantidad_autorizada_para_el_cambio__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_autorizada_para_el_cambio__c</fullName>
    <label>Cantidad autorizada para el cambio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>