force-app/main/default/objects/Case/fields/Cantidad_de__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de__c</fullName>
    <label>Cantidad reposición 2°</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>