force-app/main/default/objects/Case/fields/Cantidad_de_producto_defectuoso__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_producto_defectuoso__c</fullName>
    <label>Cantidad de producto defectuoso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>