force-app/main/default/objects/Case/fields/Cantidad_de_retiro__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_retiro__c</fullName>
    <inlineHelpText>Completar únicamente si la muestra fue retirada</inlineHelpText>
    <label>Cantidad de retiro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>