force-app/main/default/objects/Case/fields/Cantidad_reposici_n_2__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_reposici_n_2__c</fullName>
    <inlineHelpText>Completar únicamente si la reposición fue realizada</inlineHelpText>
    <label>Cantidad reposición 2°</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>