force-app/main/default/objects/Case/fields/Cantidad_reposicion__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_reposicion__c</fullName>
    <inlineHelpText>Completar únicamente si la reposición fue realizada</inlineHelpText>
    <label>Cantidad reposición</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>