force-app/main/default/objects/Case/fields/Caso_critico__c.field-meta.xml
<CustomField>
    <fullName>Caso_critico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caso crítico</label>
    <type>Checkbox</type>
</CustomField>