force-app/main/default/objects/Case/fields/Caso_de_best_care__c.field-meta.xml
<CustomField>
    <fullName>Caso_de_best_care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se usa esta casilla escondida para marcarla automáticamente cuando un caso pertenece a best care (fase 1)</description>
    <label>Caso de best care</label>
    <type>Checkbox</type>
</CustomField>