force-app/main/default/objects/Case/fields/Caso_relacionado__c.field-meta.xml
<CustomField>
    <fullName>Caso_relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso relacionado</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Casos Relacionados</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>