force-app/main/default/objects/Case/fields/CerradoPor__c.field-meta.xml
<CustomField>
    <fullName>CerradoPor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CerradoPor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasosCerrados</relationshipName>
    <type>Lookup</type>
</CustomField>