force-app/main/default/objects/Case/fields/Check_de_entregas__c.field-meta.xml
<CustomField>
    <fullName>Check_de_entregas__c</fullName>
    <label>Check de entregas</label>
    <type>Date</type>
</CustomField>