force-app/main/default/objects/Case/fields/Check_in__c.field-meta.xml
<CustomField>
    <fullName>Check_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check in</label>
    <type>Checkbox</type>
</CustomField>