force-app/main/default/objects/Case/fields/Check_in_manual__c.field-meta.xml
<CustomField>
    <fullName>Check_in_manual__c</fullName>
    <label>Check in manual</label>
    <type>DateTime</type>
</CustomField>