force-app/main/default/objects/Case/fields/Check_out__c.field-meta.xml
<CustomField>
    <fullName>Check_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check out</label>
    <type>Checkbox</type>
</CustomField>