force-app/main/default/objects/Case/fields/Check_out_manual__c.field-meta.xml
<CustomField>
    <fullName>Check_out_manual__c</fullName>
    <label>Check out manual</label>
    <type>DateTime</type>
</CustomField>