force-app/main/default/objects/Case/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>