force-app/main/default/objects/Case/fields/Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal__c</fullName>
    <label>Código postal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>