force-app/main/default/objects/Case/fields/Contador__c.field-meta.xml
<CustomField>
    <fullName>Contador__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contador</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>