force-app/main/default/objects/Case/fields/Controles_de_lote__c.field-meta.xml
<CustomField>
    <fullName>Controles_de_lote__c</fullName>
    <label>Controles de lote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>