force-app/main/default/objects/Case/fields/Correo_electronico_del_profesional__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_del_profesional__c</fullName>
    <label>Correo electrónico del profesional</label>
    <type>Email</type>
</CustomField>