force-app/main/default/objects/Case/fields/Cuenta_con_stock_actualmente__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_con_stock_actualmente__c</fullName>
    <label>¿Cuenta con stock actualmente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+ de 14 días</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>10 días</fullName>
                <isActive>false</isActive>
                <label>10 días</label>
            </value>
            <value>
                <fullName>14 días</fullName>
                <isActive>false</isActive>
                <label>14 días</label>
            </value>
            <value>
                <fullName>5 días</fullName>
                <isActive>false</isActive>
                <label>5 días</label>
            </value>
            <value>
                <fullName>7 días</fullName>
                <isActive>false</isActive>
                <label>7 días</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>