force-app/main/default/objects/Case/fields/D_as_en_este_estado__c.field-meta.xml
<CustomField>
    <fullName>D_as_en_este_estado__c</fullName>
    <formula>IF( ISPICKVAL(Status , &apos;Closed&apos;)  || ISPICKVAL(Status , &apos;Cerrado&apos;)  , TODAY()-  DATEVALUE(ClosedDate)+1  ,
IF( NOT(ISPICKVAL(Status , &apos;Closed&apos;)  || ISPICKVAL(Status , &apos;Cerrado&apos;)) , TODAY()-  DATEVALUE(CreatedDate)+1,TODAY()-  DATEVALUE(CreatedDate)+1
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días en este estado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>