force-app/main/default/objects/Case/fields/D_nde_present__c.field-meta.xml
<CustomField>
    <fullName>D_nde_present__c</fullName>
    <label>Dónde presentó?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>