force-app/main/default/objects/Case/fields/Dan360_Cantidad_a_Devolver__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cantidad_a_Devolver__c</fullName>
    <description>Campo que especificará la cantidad de la devolución.</description>
    <label>Cantidad a devolver</label>
    <length>225</length>
    <type>Text</type>
</CustomField>