force-app/main/default/objects/Case/fields/Dan360_DiasReclamo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DiasReclamo__c</fullName>
    <formula>IF( ISPICKVAL(Status, &apos;Cerrado&apos;), datevalue(ClosedDate) - datevalue(CreatedDate), TODAY() - datevalue(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días de reclamo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>