force-app/main/default/objects/Case/fields/Dan360_DiferenciaDePrecio__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DiferenciaDePrecio__c</fullName>
    <description>Campo que se registra la diferencia entre el precio acordado y el precio aplicado en el pedido.</description>
    <label>Diferencia de precio</label>
    <length>225</length>
    <type>Text</type>
</CustomField>