force-app/main/default/objects/Case/fields/Dan360_DineroQueRepresentaParaLaCompania__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DineroQueRepresentaParaLaCompania__c</fullName>
    <description>Campo que determina lo que representa para la compañía en dinero el reclamo.</description>
    <label>Dinero que representa para la compañía</label>
    <summarizedField>Dan360_ProductosDeReclamo__c.Dan360_PrecioTotal__c</summarizedField>
    <summaryForeignKey>Dan360_ProductosDeReclamo__c.Dan360_Reclamo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>