force-app/main/default/objects/Case/fields/Dan360_EnviadoSAP__c.field-meta.xml
<CustomField>
    <fullName>Dan360_EnviadoSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado SAP</label>
    <type>Checkbox</type>
</CustomField>