force-app/main/default/objects/Case/fields/Dan360_Factura__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Factura relacionada al reclamo generado.</description>
    <label>Factura</label>
    <referenceTo>Dan360_Factura__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>