force-app/main/default/objects/Case/fields/Dan360_Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Id_Externo__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>