force-app/main/default/objects/Case/fields/Dan360_MotivoDeReclamo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_MotivoDeReclamo__c</fullName>
    <description>Especifica el porqué se está realizando la devolución del producto.</description>
    <label>Motivo de reclamo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEVCVEN</fullName>
                <label>Corto vencimiento</label>
            </value>
            <value>
                <fullName>Error facturación impuesto a las ventas</fullName>
            </value>
            <value>
                <fullName>Error ingreso admin pedido</fullName>
            </value>
            <value>
                <fullName>Exento de Impuestos</fullName>
            </value>
            <value>
                <fullName>Faltante producto por abasto</fullName>
                <label>Faltante de producto</label>
            </value>
            <value>
                <fullName>No Entregado</fullName>
            </value>
            <value>
                <fullName>NOSOLIC</fullName>
                <label>No pedido</label>
            </value>
            <value>
                <fullName>No se ingresó motivo para Nota de Crédito</fullName>
            </value>
            <value>
                <fullName>PRODA</fullName>
                <label>Producto Dañado</label>
            </value>
            <value>
                <fullName>Producto Incorrecto</fullName>
            </value>
            <value>
                <fullName>PROVEN</fullName>
                <label>Producto vencido</label>
            </value>
            <value>
                <fullName>Se usó tasa impositiva incorrecta en la factura original</fullName>
            </value>
            <value>
                <fullName>Demora en la entrega</fullName>
            </value>
            <value>
                <fullName>Entrega fuera del horario/día acordado</fullName>
            </value>
            <value>
                <fullName>Malos tratos del chofer</fullName>
            </value>
            <value>
                <fullName>Dan360_PorNoPedido</fullName>
                <isActive>false</isActive>
                <label>Dan360_PorNoPedido</label>
            </value>
            <value>
                <fullName>Dan360_PorProductoDañado</fullName>
                <isActive>false</isActive>
                <label>Dan360_PorProductoDañado</label>
            </value>
            <value>
                <fullName>Dan360_PorProductoVencido</fullName>
                <isActive>false</isActive>
                <label>Dan360_PorProductoVencido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>