force-app/main/default/objects/Case/fields/Dan360_Nota_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Nota_de_Credito__c</fullName>
    <label>Nota de Credito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>