force-app/main/default/objects/Case/fields/Dan360_NroComprobanteSAP__c.field-meta.xml
<CustomField>
    <fullName>Dan360_NroComprobanteSAP__c</fullName>
    <description>Número del comprobante que está registrado en SAP.</description>
    <label>Nro. Comprobante SAP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>