force-app/main/default/objects/Case/fields/Dan360_OrderedDate__c.field-meta.xml
<CustomField>
    <fullName>Dan360_OrderedDate__c</fullName>
    <label>Ordered Date</label>
    <type>Date</type>
</CustomField>