force-app/main/default/objects/Case/fields/Dan360_OrderGetEnd__c.field-meta.xml
<CustomField>
    <fullName>Dan360_OrderGetEnd__c</fullName>
    <label>Order Get End</label>
    <type>Date</type>
</CustomField>