force-app/main/default/objects/Case/fields/Dan360_OrderGetStart__c.field-meta.xml
<CustomField>
    <fullName>Dan360_OrderGetStart__c</fullName>
    <label>Order Get Start</label>
    <type>Date</type>
</CustomField>