force-app/main/default/objects/Case/fields/Dan360_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Pedido__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Número de pedido por el cual se está generando el reclamo.</description>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>