force-app/main/default/objects/Case/fields/Dan360_ProductosReclamo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ProductosReclamo__c</fullName>
    <label>Productos de reclamo</label>
    <summaryForeignKey>Dan360_ProductosDeReclamo__c.Dan360_Reclamo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>