force-app/main/default/objects/Case/fields/Dan360_ProductosYCantidadesFaltantes__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ProductosYCantidadesFaltantes__c</fullName>
    <description>Campo donde se registran los productos y cantidades faltantes del pedido relacionado al reclamo.</description>
    <label>Productos y Cantidades faltantes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>