force-app/main/default/objects/Case/fields/Dan360_ReclamoAprobado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ReclamoAprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se marcara cuando el reclamo sea aprobado por el o los roles correspondientes</description>
    <label>Reclamo Aprobado</label>
    <type>Checkbox</type>
</CustomField>