force-app/main/default/objects/Case/fields/Dan360_Remito__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Remito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Remito relacionado a un pedido.</description>
    <label>Remito</label>
    <referenceTo>Dan360_Remito__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>