force-app/main/default/objects/Case/fields/Dan360_RequiredDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>Dan360_RequiredDeliveryDate__c</fullName>
    <label>Required Delivery Date</label>
    <type>Date</type>
</CustomField>