force-app/main/default/objects/Case/fields/Dan360_RolAsignado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_RolAsignado__c</fullName>
    <description>Roles asignados para aprobar un reclamo.</description>
    <label>Rol asignado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Gerente de ventas</fullName>
            </value>
            <value>
                <fullName>Jefe de Ventas</fullName>
            </value>
            <value>
                <fullName>Vendedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>