force-app/main/default/objects/Case/fields/Dan360_SalesDistrict__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesDistrict__c</fullName>
    <description>Hace referencia al sales district perteneciente.</description>
    <label>Sales district</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dan360_SalesDistrict</valueSetName>
    </valueSet>
</CustomField>