force-app/main/default/objects/Case/fields/Dan360_SalesDistrictColaborationRule__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesDistrictColaborationRule__c</fullName>
    <label>Sales District Colaboration Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>