force-app/main/default/objects/Case/fields/Dan360_SolicitudExterna__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SolicitudExterna__c</fullName>
    <formula>IF(CreatedBy.Contact.Id &lt;&gt; &quot;&quot;,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitud externa</label>
    <type>Text</type>
</CustomField>