force-app/main/default/objects/Case/fields/Dan360_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sucursal donde se registro el pedido.</description>
    <label>Sucursal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>