force-app/main/default/objects/Case/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <description>Campo que trae el número delivery de la factura relacionada al caso.</description>
    <formula>Dan360_Factura__r.Dan360_Delivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery</label>
    <type>Text</type>
</CustomField>