force-app/main/default/objects/Case/fields/Descripcin_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Descripcin_del_producto__c</fullName>
    <formula>Producto__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción del producto</label>
    <type>Text</type>
</CustomField>