force-app/main/default/objects/Case/fields/Detalles_tr_mite__c.field-meta.xml
<CustomField>
    <fullName>Detalles_tr_mite__c</fullName>
    <label>Detalles trámite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>