force-app/main/default/objects/Case/fields/Dia_de_envasado__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_envasado__c</fullName>
    <label>Dia de envasado</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>