force-app/main/default/objects/Case/fields/Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico__c</fullName>
    <label>Diagnóstico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>